--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     ports:
       - '${SOKETI_PORT:-6001}:6001'
       - '${SOKETI_METRICS_SERVER_PORT:-9601}:9601'
+    env_file:
+      - .env
     environment:
       - DEBUG='${DEBUG:-1}'
       - PUSHER_APP_ID='${PUSHER_APP_ID:-some-id}'
