--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,9 @@ services:
       - .env
     environment:
       - DEBUG='${DEBUG:-1}'
-      - PUSHER_APP_ID='${PUSHER_APP_ID:-some-id}'
-      - PUSHER_APP_KEY='${PUSHER_APP_KEY:-app-key}'
-      - PUSHER_APP_SECRET='${PUSHER_APP_SECRET:-some-app-secret}'
       - PUSHER_HOST='${PUSHER_HOST:-127.0.0.1}'
       - PUSHER_PORT= '${PUSHER_PORT:-6001}'
-      - PUSHER_SCHEME='${PUSHER_SCHEME:-http}' # or https
+      - PUSHER_SCHEME='${PUSHER_SCHEME:-https}' # or https
       - METRICS_SERVER_PORT=${METRICS_SERVER_PORT-9601}
       - DEFAULT_APP_ENABLE_CLIENT_MESSAGES=${DEFAULT_APP_ENABLE_CLIENT_MESSAGES-false}
     networks:
